--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/echarts": "^4.9.17",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^16.18.24",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "antd": "^5.4.4",
     "craco-less": "^2.0.0",
     "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "history": "^5.3.0",
     "less": "^4.1.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
