--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "history": "^5.3.0",
     "less": "^4.1.3",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
