--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "craco-less": "^2.0.0",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
+    "echarts-gl": "^2.0.9",
     "history": "^5.3.0",
     "less": "^4.1.3",
     "lodash": "^4.17.21",
