--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-amap": "^1.2.8",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-router-dom": "^6.10.0",
