--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.11",
     "antd": "^5.4.4",
     "craco-less": "^2.0.0",
+    "dotenv-cli": "^7.2.1",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
     "echarts-gl": "^2.0.9",
@@ -36,9 +37,12 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0"
+  },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "dotenv -e .env.dev craco start",
+    "build": "dotenv -e .env.production craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
@@ -59,8 +63,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@craco/craco": "^7.1.0"
   }
+  
 }
