--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.11",
     "antd": "^5.4.4",
     "craco-less": "^2.0.0",
+    "dayjs": "^1.11.7",
     "dotenv-cli": "^7.2.1",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
@@ -64,5 +65,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
