--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "antd": "^5.4.4",
+    "axios": "^1.4.0",
     "craco-less": "^2.0.0",
     "dayjs": "^1.11.7",
     "dotenv-cli": "^7.2.1",
@@ -27,6 +28,7 @@
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-amap": "^1.2.8",
     "react-cookies": "^0.1.1",
