--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "echarts-gl": "^2.0.9",
     "history": "^5.3.0",
     "less": "^4.1.3",
+    "less-loader": "^11.1.1",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
