--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0"
+    "@craco/craco": "^7.1.0",
+    "redux-devtools": "^3.7.0"
   },
   "scripts": {
     "start": "dotenv -e .env.dev craco start",
